--- a/views/about/colleges.html
+++ b/views/about/colleges.html
@@ -99,28 +99,43 @@
   }
   .form-content{
     margin: 0 auto;
-    width: 955px;
+    width: 1120px;
     height: 80px;
+    margin-left: 30px;
     background: #fff;
+    border-radius: 4px;
   }
-  .form-content input{
+  /* .form-content input{
     width: 130px;
     height: 22px;
     border: 1px solid #acacac;
-  }
+  } */
   .form-content>div{
-    display: inline-block;
     margin-top: 25px;
-    margin-left: 40px;
+    margin-left: 25px;
+    float: left;
   }
   .submitId{
     display: inline-block;
-    width: 90px;
-    height: 35px;
+    width: 174px;
+    height: 40px;
     background: #f61546;
     text-align: center;
     color: #fff;
-    line-height: 35px;
+    line-height: 40px;
+    border-radius: 4px;
+    font-size: 16px;
+  }
+  .form-content span {
+      font-size: 16px;
+      color: #666;
+      margin-right: 10px;
+  }
+  .form-content input, .form-content select{
+      width: 200px;
+      height: 38px;
+      border: 1px #dcdcdc solid;
+      border-radius: 4px;
   }
   .jian {
       background: url({{helper.cdnhost}}/assets/img/about/colleges_1.png);
@@ -722,14 +737,14 @@
 
 <!--报名表单-->
 <div class="bg" style="margin-top: 50px;">
-  <div class="baoming-form" style="background: #c13232;width: 1200px;height: 164px;margin-top: 20px;border-radius: 4px;">
+  <div class="baoming-form" style="background: #c13232;width: 1180px;height: 164px;margin-top: 20px;border-radius: 4px;">
     <div class="baoming" style="width: 151px;height: auto;margin: 0 auto;font-size: 24px;color: #fff;margin-bottom: 20px;padding-top: 20px;">我要报名</div>
-    <div class="form-content">
-      <div><span>您的姓名：</span><input type="text"  id="username" name="username"/></div>
-      <div><span>您的手机：</span><input type="tel" id="tel" name="tel"/></div>
+    <div class="form-content clearfix">
+      <div style="margin-left: 20px;"><span>您的姓名</span><input type="text"  id="username" name="username"/></div>
+      <div><span>您的手机</span><input type="tel" id="tel" name="tel"/></div>
       <div>
-        <span>意向国家：</span>
-        <select id="city" name="city" style="overflow-y:auto;padding: 0 20px 0 10px;">
+        <span>意向国家</span>
+        <select id="firstCountry" name="city" style="overflow-y:auto;padding: 0 20px 0 10px;height: 40px;">
             <option value='1'>美国</option>
             <option value='2'>英国</option>
             <option value='3'>加拿大</option>
@@ -760,7 +775,7 @@
       </div>
       <div class="submitId" id="submitId" style="cursor: pointer">在线预约</div>
       <div style="display: none;">
-        <input type="hidden" name="activityTitle" id="activityTitle" value="马凯特大学" />
+        <input type="hidden" id="relationId" value="34">
       </div>
     </div>
   </div>
@@ -778,7 +793,6 @@
 <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/slide.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/online_evaluation.js" ></script>
-<script src="{{helper.cdnhost}}/dep/js/schooltopic/index.js"></script>
 <script src="{{helper.cdnhost}}/dep/js/schooltopic/jquery.bxslider.js"></script>
 <script src="{{helper.cdnhost}}/dep/js/schooltopic/Newform123.js"></script>
 <script>
