--- a/public/assets/css/special_page.css
+++ b/public/assets/css/special_page.css
@@ -377,7 +377,8 @@ ul {
 
 .input-control {
 	width: 238px;
-	height: 34px;
+  height: 34px;
+  line-height: 34px;
 	outline: 0;
 	border: solid 1px #e5e5e5;
   text-indent: 10px;
@@ -391,9 +392,9 @@ ul {
   width: 0;
   bottom: 0;
   background: #c13232;
-  height: 2px;
+  height: 1px;
   -webkit-transition: .2s ease-out width;
-  transition: .2s ease-out left width;
+  transition: .2s ease-out width;
 }
 .add-animate-active::after{
   left: 80px;
@@ -492,12 +493,37 @@ ul {
 .from-items{
   position: absolute;
   left: 79px;
-  top: 38px;
+  top: 40px;
   width: 239px;
-  background: #fff;
-  box-shadow: 0 0 5px rgba(0, 0, 0, .14);
   z-index: 1;
-  display: none;
+  -webkit-box-shadow: 0 0 7px rgba(0, 0, 0, .2);
+  box-shadow: 0 0 7px rgba(0, 0, 0, .2);
+  -webkit-transition: .3s ease-out height;
+  transition: .3s ease-out height;
+  height: 0;
+  overflow: hidden;
+}
+.city-val + .icon-arrow{
+  background:url(/assets/img/feedback.png) no-repeat center center;
+  height: 12px;
+  width: 24px;
+  position: absolute;
+  top: 50%;
+  right: 0;
+  margin-top:-6px;
+  -webkit-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .2s linear transform;
+  transition: .2s linear transform;
+}
+.city-val + .icon-arrow.arrow-current{
+  -webkit-transform-origin: center center;
+  transform-origin: center center;
+  -webkit-transform: rotate(180deg);
+  transform: rotate(180deg);
+}
+.from-items.from-items-current{
+  height: 520px;
 }
 .country-group li{
   background: #fff;
@@ -511,6 +537,3 @@ ul {
 .country-group li:hover{
   background-color: #e5e5e5;
 }
-/* .select-city input[type='text']:focus + .from-items{
-  display: block;
-} */
