--- a/views/about/grouptemplate.html
+++ b/views/about/grouptemplate.html
@@ -17,7 +17,7 @@
                                                                                                                                                    
     {% import "widget/new_nav_first/common_nav.html" as common_nav %}
     {{ common_nav.common_nav(tdk,helper) }}
-    <script>$('.progress').animate({ width: '25%'},200)</script>
+    <script>$('.progress').animate({ width: '20%'},200)</script>
     <div class="banner" style="background-image:url({{schooltopic.list.sch_background_map}});height: 450px; overflow:hidden;background-size:cover;background-position: center center">
         <div class="wrap1">
           <div class="btn-box">
@@ -152,15 +152,16 @@
             <from class="form-horizontal">
                 <div class="items-from items-from-active">
                   <label for="" class="control-label">您的姓名</label>
-                  <input type="text" class="input-control">
+                  <input type="text" class="input-control user-name">
                 </div>
                 <div class="items-from items-from-active">
                   <label for="" class="control-label">您的手机</label>
-                  <input type="text" class="input-control">
+                  <input type="text" class="input-control user-ipone">
                 </div>
                 <div class="items-from items-from-active select-city">
                   <label for="" class="control-label">所在城市</label>
-                  <input type="text" class="input-control">
+                  <input type="text" class="input-control city-val">
+                  <em class="icon-arrow"></em>
                   <div class="from-items">
                     {% set countryList = [
                       {
@@ -278,7 +279,7 @@
                   </div>
                 </div>
                 <div class="items-from">
-                  <button type="button" class="btn-default">立即预约</button>
+                  <input type="button" value="立即预约" class="btn-default handleSubmit">
                 </div>
             </from>
           </div>
@@ -295,48 +296,11 @@
 <script src="{{helper.cdnhost}}/dep/js/schooltopic/index.js"></script>
 <script src="{{helper.cdnhost}}/dep/js/schooltopic/jquery.bxslider.js"></script>
 <script src="{{helper.cdnhost}}/dep/js/schooltopic/Newform123.js"></script>
+<script src="{{helper.cdnhost}}/assets/js/signupFrom.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/swiper.min.js"></script>
 <script>
 $('.progress').animate({ width: '100%'},200,function(){
   $('.progress').css('opacity', 0)
 })</script>
-<script>
-  $(function(){
-     //
-    isBrowser()
-    function isBrowser(){
-      if (navigator.appName === 'Microsoft Internet Explorer') { //是否是IE浏览器
-        if (navigator.userAgent.match(/Trident/i) && navigator.userAgent.match(/MSIE 8.0/i)) { //浏览器内核是否为Trident内核IE8.0
-          alert('很抱歉！当前浏览器版本过低，如若获得良好的用户体验，建议更换或者升级！')
-        }
-      }
-    }
-    //初始化
-    new WOW().init();
-    //轮播图初始化
-    var mySwiper = new Swiper ('.swiper-container', {
-      loop: true,
-      nextButton: '.swiper-button-next',
-      prevButton: '.swiper-button-prev',
-      autoplay : 5000,
-    });
-    //
-    $('.input-control').focus(function(){
-      $(this).parents('.items-from').addClass('add-animate-active')
-    })
-    $('.input-control').blur(function(){
-      $(this).parents('.items-from').removeClass('add-animate-active')
-    })
-
-    $('.select-city .input-control').focus(function(){
-        $('.from-items').css('display', 'block')
-        $('.country-group li').on('click', function(){
-        var oval = $.trim($(this).text())
-        $('.select-city .input-control').val(oval)
-        $('.from-items').css('display', 'none')
-      })
-    })
-  })
-</script>
 </body>
 </html>
