修改院校页面

--- a/views/about/schooltopic.html
+++ b/views/about/schooltopic.html
@@ -253,7 +253,7 @@
       <div><span>您的手机：</span><input type="tel" id="tel" name="tel"/></div>
       <div>
         <span>意向国家：</span>
-        <select id="city" name="city" style="overflow-y:auto;padding: 0 20px 0 10px;">
+        <select id="firstCountry" name="city" style="overflow-y:auto;padding: 0 20px 0 10px;">
             <option value='1'>美国</option>
             <option value='2'>英国</option>
             <option value='3'>加拿大</option>
