修改院校模板

--- a/views/about/schooltopic.html
+++ b/views/about/schooltopic.html
@@ -284,7 +284,7 @@
       </div>
       <div class="submitId" id="submitId" style="cursor: pointer">在线预约</div>
       <div style="display: none;">
-        <input type="hidden" name="activityTitle" id="activityTitle" value="马凯特大学" />
+        <input type='hidden' id='relationId' value='18'>
       </div>
     </div>
   </div>
